# medical-lay

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_ACCESS.md  LICENSE  Makefile  QUICKSTART.md  README.md  populate_solr_with_wumls.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
notebooks/: analyze_solr_results_strict_uniqueness.ipynb  analyze_tlc_umls_annotations.ipynb  check_uniqueness_of_mentions.ipynb  create_index_data_from_wumls.ipynb  create_prodigy_data.ipynb  create_prodigy_data_strict_uniqueness.ipynb  create_search_terms.ipynb  german_umls_to_xmen.ipynb  parse_TLC_for_inference.ipynb  parse_wumls.ipynb  plots.ipynb  query_edit_distance.ipynb  query_solr.ipynb  query_solr_doc_style.ipynb  query_solr_strict_uniqueness.ipynb  query_solr_with_mentions.ipynb  sapbert_xlmr_tlc_create_embeddings.ipynb  sapbert_xlmr_tlc_ger_similarity_search.ipynb  semantic_types_in_tlc_annotations.ipynb  tlc_span_lengths.ipynb  tlc_to_json.ipynb  train_cross_encoder_xmen.ipynb  wumls_insights.ipynb
notebooks/analysis/: analyze_solr_results.ipynb  analyze_tlc_umls_annotations.ipynb  error_analysis.ipynb  search_through_tlc.ipynb  tlc_umls_corpus_analysis.ipynb
notebooks/annotation/: create_prodigy_data_from_reannotations.ipynb
notebooks/experiments/: create_search_terms.ipynb  parse_TLC_for_english_inference.ipynb  parse_tlc_umls_annotations_for_inference.ipynb  query_solr.ipynb  query_solr_with_mentions.ipynb  results.ipynb
src/: cistem.py  config.py  data_cleaning.py  data_loading.py  get_cui_for_strings.py  models.py  parse_umls_rff_only_cui_string.py  umlsStructure.cPickle
src/parse_umls/: parse_umls_rff.py  parse_umls_rff_only_cui_string.py
src/parse_umls/umls_api/: get_cui_for_strings.py
src/preprocessing/: cistem.py
tests/: __init__.py  conftest.py  test_config.py  test_data_cleaning.py
