[tool.poetry]
name = "medical-lay"
version = "0.1.0"
description = ""
authors = ["tpatzelt <tpatzelt@uos.de>"]
readme = "README.md"
#packages = [{ include = "."}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
requests = "^2.28.2"
pydantic = "^1.10.7"
tqdm = "^4.65.0"
pandas = "^1.5.3"
spacy = "^3.5.1"
pysolr = "^3.9.0"
python-levenshtein = "^0.20.9"
deepl = "^1.14.0"
diskcache = "^5.4.0"
ipykernel = "5.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
